# ostis-ps-lib

./: .gitignore  404.html  CMakeLists.txt  README.md  conanfile.txt  docker-compose.yml  ellipsis.yaml  index.html  index.md  mkdocs.yml  specification.scs
cxx/common-module/: CMakeLists.txt  CommonModule.cpp  CommonModule.hpp
cxx/common-module/exception/: ActionCancelledException.cpp  ActionCancelledException.hpp
cxx/common-module/keynodes/: Keynodes.cpp  Keynodes.hpp
cxx/common-module/utils/: ActionUtils.cpp  ActionUtils.hpp  LogicUtils.cpp  LogicUtils.hpp  RelationUtils.cpp  RelationUtils.hpp  TemplateParamsUtils.cpp  TemplateParamsUtils.hpp
cxx/non-atomic-action-interpreter-module/: CMakeLists.txt  NonAtomicActionInterpreterModule.cpp  NonAtomicActionInterpreterModule.hpp
cxx/non-atomic-action-interpreter-module/agent/: NonAtomicActionInterpreterAgent.cpp  NonAtomicActionInterpreterAgent.hpp
cxx/non-atomic-action-interpreter-module/constants/: NonAtomicActionInterpreterConstants.hpp
cxx/non-atomic-action-interpreter-module/exception/: ActionCancelledException.cpp  ActionCancelledException.hpp
cxx/non-atomic-action-interpreter-module/interpreter/: NonAtomicActionInterpreter.cpp  NonAtomicActionInterpreter.hpp
cxx/non-atomic-action-interpreter-module/keynodes/: Keynodes.cpp  Keynodes.hpp  NonAtomicKeynodes.cpp  NonAtomicKeynodes.hpp
cxx/non-atomic-action-interpreter-module/manager/: LogicFormulaManager.cpp  LogicFormulaManager.hpp
cxx/non-atomic-action-interpreter-module/test/: tests.cmake
cxx/non-atomic-action-interpreter-module/test/agent/: AssignDynamicArgumentTestAgent.cpp  AssignDynamicArgumentTestAgent.hpp  CheckDynamicArgumentTestAgent.cpp  CheckDynamicArgumentTestAgent.hpp  QuestionFinishedSuccessfullyTestAgent.cpp  QuestionFinishedSuccessfullyTestAgent.hpp  QuestionFinishedTestAgent.cpp  QuestionFinishedTestAgent.hpp  QuestionFinishedUnsuccessfullyTestAgent.cpp  QuestionFinishedUnsuccessfullyTestAgent.hpp
cxx/non-atomic-action-interpreter-module/test/keynodes/: TestKeynodes.cpp  TestKeynodes.hpp
cxx/non-atomic-action-interpreter-module/test/testStructures/: allPathsInSequence.scs  argumentsMatching.scs  dynamicArguments.scs  finishedSubaction.scs  notAllPathsInSequence.scs  successfulConditionalTransitionWithMatching.scs  successfulConditionalTransitionWithoutMatching.scs  (+4 more)
cxx/non-atomic-action-interpreter-module/utils/: ActionUtils.cpp  ActionUtils.hpp  RelationUtils.cpp  RelationUtils.hpp  TemplateParamsUtils.cpp  TemplateParamsUtils.hpp
fixed-search-strategy-template-processing-module/fixed-search-strategy-template-processing-module/: CMakeLists.txt  fixed_search_strategy_template_processing_module.cpp  fixed_search_strategy_template_processing_module.hpp
fixed-search-strategy-template-processing-module/fixed-search-strategy-template-processing-module/agent/: fixed_search_strategy_template_processing_agent.cpp  fixed_search_strategy_template_processing_agent.hpp
fixed-search-strategy-template-processing-module/fixed-search-strategy-template-processing-module/data/: filter_template.cpp  filter_template.hpp  fixed_strategy_search_template.cpp  fixed_strategy_search_template.hpp  generate_template.cpp  generate_template.hpp  not_filter_template.cpp  not_filter_template.hpp  not_search_template.cpp  not_search_template.hpp  parameterized_template.cpp  parameterized_template.hpp  parameterized_template_builder.cpp  parameterized_template_builder.hpp  search_template.cpp  search_template.hpp  template_arguments.cpp  template_arguments.hpp  template_results.cpp  template_results.hpp  wait_template.cpp  wait_template.hpp
fixed-search-strategy-template-processing-module/fixed-search-strategy-template-processing-module/keynodes/: keynodes.hpp
fixed-search-strategy-template-processing-module/fixed-search-strategy-template-processing-module/test/: CMakeLists.txt
format-translators-module/: .gitignore  CMakeLists.txt  README.md  conanfile.py  specification.scs
format-translators-module/cmake/: install.cmake
format-translators-module/docs/: dummy_key_elements_orderer_agent.md  scg_visualisation_translator_agent.md
format-translators-module/format-translators-module/: CMakeLists.txt  format_translators_module.cpp  format_translators_module.hpp
format-translators-module/format-translators-module/constants/: format_translators_constants.cpp  format_translators_constants.hpp
format-translators-module/format-translators-module/keynodes/: format_translators_keynodes.hpp
format-translators-module/format-translators-module/model/: connector.hpp  element.cpp  element.hpp  link.cpp  link.hpp  node.cpp  node.hpp
format-translators-module/format-translators-module/parser/: structure_to_triples_parser.cpp  structure_to_triples_parser.hpp  triples_to_model_parser.cpp  triples_to_model_parser.hpp  types.cpp  types.hpp
format-translators-module/format-translators-module/test/: CMakeLists.txt
format-translators-module/format-translators-module/visitor/: gwf_translator_visitor.cpp  gwf_translator_visitor.hpp  visitor.cpp  visitor.hpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/: CMakeLists.txt  NonAtomicActionInterpreterModule.hpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/agent/: NonAtomicActionInterpreterAgent.cpp  NonAtomicActionInterpreterAgent.hpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/constants/: NonAtomicActionInterpreterConstants.cpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/interpreter/: NonAtomicActionInterpreter.cpp  NonAtomicActionInterpreter.hpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/keynodes/: NonAtomicKeynodes.hpp
non-atomic-action-interpreter-module/non-atomic-action-interpreter-module/test/: CMakeLists.txt
problem-solver/cxx/format-translators-module/: CMakeLists.txt  format_translators_module.cpp  format_translators_module.hpp
ps-common-lib/ps-common-lib/: CMakeLists.txt
ps-common-lib/ps-common-lib/src/: action_cancelled_exception.cpp
(+454 files in other folders)
