cmake_minimum_required(VERSION 3.11)
project(2)
set(SC_BUILD_TESTS ON)
if(${SC_BUILD_TESTS})
    include(CTest)
    include(GoogleTest)
    find_package(GTest REQUIRED)
endif()
find_package(sc-machine REQUIRED)
if(${SC_CLANG_FORMAT_CODE})
    include(cmake/ClangFormat.cmake)
endif()
add_subdirectory(problem-solver)
